force-app/main/default/objects/Customer_Sync_History__c/Customer_Sync_History__c.object-meta.xml
<CustomObject>
    <label>Customer Sync History</label>
    <nameField>
        <displayFormat>CSH-{0000000000}</displayFormat>
        <label>Customer Sync History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sync Historys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>