force-app/main/default/objects/Customer_Sync_History__c/fields/Customer_Extend__c.field-meta.xml
<CustomField>
    <fullName>Customer_Extend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Extend</label>
    <referenceTo>Customer_Extend__c</referenceTo>
    <relationshipLabel>Customer Sync Historys</relationshipLabel>
    <relationshipName>Customer_Sync_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>