force-app/main/default/objects/Customer_Sync_History__c/fields/CustomerAddressContents__c.field-meta.xml
<CustomField>
    <fullName>CustomerAddressContents__c</fullName>
    <label>CustomerAddressContents</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>