force-app/main/default/objects/Customer_Sync_History__c/fields/CustomerContents__c.field-meta.xml
<CustomField>
    <fullName>CustomerContents__c</fullName>
    <label>CustomerContents</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>