force-app/main/default/objects/Customer_Sync_History__c/fields/CustomerExtendContents__c.field-meta.xml
<CustomField>
    <fullName>CustomerExtendContents__c</fullName>
    <label>CustomerExtendContents</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>